<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="75dp"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="10dp"
      android:layout_marginRight="20dp"
      android:background="#f3f4ee">

      <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/temperature"
        android:textColor="#000000"
        android:textSize="16sp" />

      <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:alpha="0.8"
        android:contentDescription="@string/image_description"
        android:src="@drawable/temperature" />

      <TextView
        android:id="@+id/textTemp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/n_a"
        android:textColor="#000000"
        android:textSize="40sp" />
    </RelativeLayout>


    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="75dp"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="95dp"
      android:layout_marginRight="20dp"


      android:background="#f3f4ee">

      <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/humidity"
        android:textColor="#000000"
        android:textSize="16sp" />

      <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:alpha="0.8"
        android:contentDescription="@string/image_description"
        android:src="@drawable/humidity" />

      <TextView
        android:id="@+id/textHum"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/n_a"
        android:textColor="#000000"
        android:textSize="40sp" />
    </RelativeLayout>


    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="120dp"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="180dp"
      android:layout_marginRight="20dp"
      android:layout_marginBottom="20dp"
      android:background="#f3f4ee">

      <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:alpha="0.8"
        android:contentDescription="@string/image_description"
        android:src="@drawable/soil" />

      <TextView
        android:id="@+id/textSoil"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_marginStart="130dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/n_a"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp" />

    </RelativeLayout>

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="75dp"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="310dp"
      android:layout_marginRight="20dp"
      android:layout_marginBottom="20dp"
      android:background="#f3f4ee">

      <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/air_quality"
        android:textColor="#000000"
        android:textSize="16sp" />

      <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:alpha="0.8"
        android:contentDescription="@string/image_description"
        android:src="@drawable/airquality" />

      <TextView
        android:id="@+id/textAir"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:text="@string/n_a"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp" />


    </RelativeLayout>


  </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
